python-fll (0.9.13) UNRELEASED; urgency=medium

  [ Niall Walsh ]
  * bin/fll enhancements
    - allow setting of hostname
    - add password in distro to set password and addusers or autologin
    - force cdebootstrap to systemd-sysv and include core packages
    - add fscomp code to actually mksquashfs
    - add tar option to fscomp

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 14 Apr 2014 00:02:45 +0200

python-fll (0.9.12) unstable; urgency=low

  * bump standards version to 3.9.5, no changes necessary.
  * debian/control: switch Vcs tags to github.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 14 Apr 2014 00:02:03 +0200

python-fll (0.9.11) unstable; urgency=low

  * rebuild against python-apt 0.9.0.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 21 Oct 2013 22:22:27 +0200

python-fll (0.9.10) unstable; urgency=low

  * bump standards version to 3.9.4, no changes necessary.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 12 Jan 2013 03:30:17 +0100

python-fll (0.9.9) unstable; urgency=low

  * revert Dir::Bin::dpkg hack.

 -- Kel Modderman <kel@otaku42.de>  Sun, 22 Apr 2012 13:08:37 +0200

python-fll (0.9.8) unstable; urgency=low

  * bump standards version to 3.9.3, no changes necessary.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 23 Feb 2012 16:52:09 +0100

python-fll (0.9.7) unstable; urgency=low

  * switch to compat level 9.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 16 Jan 2012 03:26:32 +0100

python-fll (0.9.6) unstable; urgency=low

  * re-enable mythes-*, #640606 and duplicates have been fixed.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 22 Dec 2011 02:06:13 +0100

python-fll (0.9.5) unstable; urgency=low

  * disable mythes-* for the time being (#640606, #640607, #643644).
  * Update for python2.7.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 30 Nov 2011 22:57:17 +0100

python-fll (0.9.4) unstable; urgency=low

  [ Kel Modderman ]
  * add distro and fscomp skeletons.
  * remove main.py.