@@ -7,6 +7,7 @@ python-fll (0.9.13) UNRELEASED; urgency=medium
     - force cdebootstrap to systemd-sysv and include core packages
     - add fscomp code to actually mksquashfs
     - add tar option to fscomp
+    - create initramfs on chroot deinit
 
  -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 14 Apr 2014 00:02:45 +0200
 
